--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8e0f3cf0",
    "metadata": {},
    "outputs": [
@@ -51,14 +51,16 @@
     }
    ],
    "source": [
-    "# Null Hypothesis: There is a significant difference between the weight loss of those who followed Diet1 vs those who followed Diet2\n",
-    "# Alt Hypothesis: There is not a significant difference between the weight loss of those who followed Diet1 vs those who followed Diet2\n",
+    "# Null Hypothesis: There is not a significant difference between the weight loss of those who followed Diet1 vs those who followed Diet2\n",
+    "# Alt Hypothesis: There is a significant difference between the weight loss of those who followed Diet1 vs those who followed Diet2\n",
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "\n",
+    "# Convert the data into two different arrays\n",
     "Diet1 = np.array([2.0, 2.5, 3.0, 2.8, 2.3, 2.7, 2.5])\n",
     "Diet2 = np.array([3.0, 3.2, 3.1, 2.9, 2.8, 3.0, 3.2])\n",
     "\n",
+    "#print out the Student t-test\n",
     "print(stats.ttest_ind(Diet1,Diet2))"
    ]
   },
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eecad0ca",
    "metadata": {},
    "outputs": [
@@ -132,13 +134,15 @@
     }
    ],
    "source": [
-    "# Null Hypothesis: One of the three fertilizers is superior to the others\n",
-    "# Alt Hypothesis: None of the three fertilizers is superior to the others\n",
+    "# Null Hypothesis: None of the three fertilizers is superior to the others\n",
+    "# Alt Hypothesis: One of the three fertilizers is superior to the others\n",
     "\n",
+    "# Convert the data into three different arrays\n",
     "fert1 = np.array([20, 21, 20, 19, 20])\n",
     "fert2 = np.array([22, 21, 23, 22, 21])\n",
     "fert3 = np.array([24, 23, 22, 23, 24])\n",
     "\n",
+    "#Print the ANOVA test\n",
     "print(stats.f_oneway(fert1, fert2, fert3))"
    ]
   },
@@ -148,6 +152,50 @@
    "metadata": {},
    "source": [
     "The p-value is very small meaning we should reject the Null Hypothesis. If the p-value was large, we could conclude that one fertilizer is better than the others."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "54b38ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Multiple Comparison of Means - Tukey HSD, FWER=0.05      \n",
+      "==============================================================\n",
+      "   group1       group2    meandiff p-adj  lower  upper  reject\n",
+      "--------------------------------------------------------------\n",
+      "Fertilizer 1 Fertilizer 2      1.8 0.0099 0.4572 3.1428   True\n",
+      "Fertilizer 1 Fertilizer 3      3.2 0.0001 1.8572 4.5428   True\n",
+      "Fertilizer 2 Fertilizer 3      1.4 0.0409 0.0572 2.7428   True\n",
+      "--------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+    "\n",
+    "# Determine which fertilizer is superior\n",
+    "\n",
+    "# combine datae and create labels\n",
+    "combined_fert_data = np.concatenate([fert1, fert2, fert3])\n",
+    "labels = ['Fertilizer 1'] * len(fert1) + ['Fertilizer 2'] * len(fert2) + ['Fertilizer 3'] * len(fert3)\n",
+    "\n",
+    "# perform Turkey's HSD test\n",
+    "turkey_test = pairwise_tukeyhsd(combined_fert_data, labels, alpha=0.05)\n",
+    "\n",
+    "print(turkey_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51bf16e3",
+   "metadata": {},
+   "source": [
+    "According the the Turkey Test, all fertilizers are have a statistically significant difference in yield. Fertilizer 3 has the highest average, which would lead me to conclude that it is the superior fertilizer."
    ]
   }
  ],
